<resources>
    <string name="app_name">Polyblem</string>
    <string name="action_help">Aide</string>
    <string name="action_delete">Supprimer l\'incident</string>
    <string name="action_logout">Déconnecter</string>
    <string name="category">Catégorie</string>
    <string name="localisation_label">Localisation : </string>
    <string name="email_label">Email : </string>
    <string name="email">email@domaine.fr</string>
    <string name="localisation">Localisation</string>
    <string name="description">Description</string>
    <string name="title">Titre</string>
    <string name="image">image</string>
    <string name="category_label">Catégorie : </string>
    <string name="add_agenda">Ajouter à l\'agenda</string>
    <string name="send_email">Envoyer un email</string>
    <string name="description_label">Description :</string>
    <string name="help">Aide</string>
    <string name="date">JJ/MM/AA</string>
    <string name="add_image">Ajouter une image</string>
    <string name="localisation_detail">Détails</string>
    <string name="urgency">Urgence</string>
    <string name="send">Envoyer</string>
    <string name="welcome">Bienvenue sur Polyblem!</string>
    <string name="connection">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="connection_validate">Se connecter</string>
    <string name="help_email">Ce bouton permet d\'envoyer un email au déclarateur de l\'incident.
                Il sera pré-rempli avec les informations concernant l\'incident.
                Vous pourrez choisir l\'application mail que vous souhaitez pour effectuer cette action.</string>
    <string name="help_agenda">Ce bouton permet d\'ajouter un incident à l\'agenda de votre choix.</string>
</resources>
