<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/welcome" />

    <TextView
        android:id="@+id/connection"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/empty"
        android:gravity="center"
        android:text="@string/connection"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connection"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/connection_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:background="@color/white"
        android:text="@string/connection_validate" />
</RelativeLayout>