<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F9F9FA"
        tools:context=".declaration.DeclarationActivity">

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_layout"
            android:background="@drawable/background">

            <Spinner
                android:id="@+id/category"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_layout"
            android:background="@drawable/background">

            <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_layout"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:text="@string/add_image" />

        <RelativeLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_image"
            android:background="@drawable/background">

            <ImageView
                android:id="@+id/noImageAdded"
                android:layout_width="match_parent"
                android:layout_height="90dp" />

            <HorizontalScrollView
                android:id="@+id/title_horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="1dp"
                android:fillViewport="false"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <GridView
                        android:id="@+id/grid_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scrollbars="none" />
                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_layout"
            android:background="@drawable/background">

            <Spinner
                android:id="@+id/location"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/location_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_layout"
            android:background="@drawable/background">

            <EditText
                android:id="@+id/location_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/localisation_detail"
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/urgency_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_detail_layout"
            android:background="@drawable/background">

            <TextView
                android:id="@+id/urgency"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="@string/urgency"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <SeekBar
                    android:id="@+id/urgencyValue"
                    style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="2"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:progress="0" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/urgencyValue"
                    android:layout_below="@+id/urgencyValue"
                    android:paddingEnd="10dp"
                    app:srcCompat="@drawable/ic_add_black_24dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/urgencyValue"
                    android:layout_below="@+id/urgencyValue"
                    android:paddingStart="10dp"
                    app:srcCompat="@drawable/ic_minus_black_24dp" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/urgency_layout"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:text="@string/send" />
    </RelativeLayout>

</ScrollView>

